AP-961,AP-964,AP-969, alignment issue for DSAR webform for ipad, alignment issue resolved for workflow,duplicate subject type issue resolved,radio button issue for invite user done

--- a/src/app/_components/layout/header/header.component.scss
+++ b/src/app/_components/layout/header/header.component.scss
@@ -742,3 +742,10 @@ button.btn.btn-link:hover {
   background: #dc3545;
   border-radius: 13px;
 }
+
+@media(min-width:767px) and (max-width:1024px) {
+  .nav-mr {
+    margin-left: 0;
+  }
+ 
+}
